# vlmc

./: .gitignore  AUTHORS  CMakeLists.txt  HACKING  INSTALL  INSTALL.win32  NEWS  README  TRANSLATORS  chouquette_test  fortunes.txt  locale.pri  ressources-ts.qrc  ressources.qrc  vlmc  vlmc.pro  vlmc_es.ts  vlmc_fr.ts
launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h  launcher.pro  main.cpp
src/: CMakeLists.txt  Clip.cpp  Clip.h  Image.h  InputMedia.cpp  InputMedia.h  Library.cpp  Library.h  Media.cpp  Media.h  MetaDataManager.cpp  MetaDataManager.h  OutputMedia.cpp  OutputMedia.h  Singleton.hpp  TimelineBackend.cpp  TimelineBackend.h  Track.cpp  Track.h  UndoStack.cpp  UndoStack.h  WorkflowFileRenderer.cpp  WorkflowFileRenderer.h  main.cpp  src.pri  src.pro  vlmc.cpp  vlmc.h  winvlmc.cpp
src/API/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  vlmc_module.h  vlmc_module_internal.h  vlmc_module_variables.cpp
src/Actions/: ActionStack.cpp  ActionStack.h  StackedAction.cpp  StackedAction.h  StackedAction.hpp  actions.pri
src/Commands/: Commands.cpp  Commands.h  Commands.hpp  KeyboardShortcutHelper.cpp  KeyboardShortcutHelper.h  StackedAction.hpp  commands.pri
src/Configuration/: ProjectSettingsDefault.cpp  ProjectSettingsDefault.h  SettingValue.cpp  SettingValue.h  SettingsManager.cpp  SettingsManager.h  VLMCSettingsDefault.cpp  VLMCSettingsDefault.h  configuration.pri
src/EffectsEngine/: CopyOnWrite.cpp  CopyOnWrite.hpp  EFFECTS_IDEAS  EffectNode.cpp  EffectNode.h  EffectNodeFactory.cpp  EffectNodeFactory.h  EffectPluginFactory.cpp  EffectPluginFactory.h  EffectPluginTypeLoader.cpp  EffectPluginTypeLoader.h  EffectPluginTypeManager.cpp  EffectPluginTypeManager.h  EffectsEngine.cpp  EffectsEngine.h  EffectsEngine.pri  EffectsEngine.pro  EffectsFactory.cpp  EffectsFactory.h  GenericEffect.cpp  GenericEffect.h  GreenFilterEffect.cpp  GreenFilterEffect.h  GreenFilterEffectFactory.cpp  GreenFilterEffectFactory.h  GreenFilterEffectPlugin.h  GreenFilterEffectPluginCreator.cpp  GreenFilterEffectPluginCreator.h  IEffectNode.h  IEffectPlugin.h  IEffectPluginCreator.h  IEffectPluginFactory.h  IGenericEffect.h  InSlot.hpp  LightVideoFrame.cpp  LightVideoFrame.h  MixerEffect.cpp  MixerEffect.h  MixerEffectFactory.cpp  MixerEffectFactory.h  (+14 more)
src/GUI/: About.cpp  About.h  AbstractGraphicsMediaItem.cpp  AbstractGraphicsMediaItem.h  AudioProjectPreferences.cpp  AudioProjectPreferences.h  AudioSpectrumDrawer.cpp  AudioSpectrumDrawer.h  ClickableLabel.cpp  ClickableLabel.h  DockWidgetManager.cpp  DockWidgetManager.h  FileBrowser.cpp  FileBrowser.h  FileInfoListModel.cpp  GUI.pri  GraphicsAudioItem.cpp  GraphicsAudioItem.h  GraphicsCursorItem.cpp  GraphicsCursorItem.h  GraphicsMovieItem.cpp  GraphicsMovieItem.h  GraphicsTrack.hpp  Import.cpp  Import.h  ImportBrowser.cpp  ImportBrowser.h  ImportMediaCellView.cpp  ImportMediaCellView.h  ImportMediaListController.cpp  ImportMediaListController.h  LCDTimecode.cpp  LCDTimecode.h  LanguagePreferences.cpp  LanguagePreferences.h  LibraryWidget.cpp  ListViewMediaItem.cpp  ListViewMediaItem.h  MainWindow.cpp  MainWindow.h  (+35 more)
src/GUI/ui/: About.ui  (+16 more)
src/Gui/: About.cpp  About.h  ClickableLabel.cpp  ClickableLabel.h  ClipProperty.cpp  ClipProperty.h  DockWidgetManager.cpp  DockWidgetManager.h  FileInfoListModel.cpp  FileInfoListModel.h  Gui.pri  LCDTimecode.cpp  LCDTimecode.h  LanguageHelper.cpp  LanguageHelper.h  LanguagePreferences.cpp  LanguagePreferences.h  MainWindow.cpp  MainWindow.h  PreviewRuler.cpp  PreviewRuler.h  PreviewWidget.cpp  PreviewWidget.h  TagWidget.cpp  TagWidget.h  Transcode.cpp  Transcode.h  UndoStack.cpp  UndoStack.h  WorkflowFileRendererDialog.cpp  WorkflowFileRendererDialog.h
src/LibVLCpp/: LibVLCpp.pri  VLCException.cpp  VLCException.h  VLCInstance.cpp  VLCInstance.h  VLCMedia.cpp  VLCMedia.h  VLCMediaList.cpp  VLCMediaList.h  VLCMediaPlayer.cpp  VLCMediaPlayer.h  VLCpp.hpp  VlmManager.cpp  VlmManager.h  VlmMedia.cpp  VlmMedia.h
src/Media/: Clip.cpp  Clip.h  Media.cpp  Media.h  Media.pri
src/Metadata/: MetaDataManager.cpp  MetaDataManager.h  MetaDataWorker.cpp  MetaDataWorker.h  Metadata.pri
src/Project/: ProjectManager.cpp  ProjectManager.h  projectManager.pri
src/Renderer/: ClipRenderer.cpp  ClipRenderer.h  GenericRenderer.cpp  GenericRenderer.h  Renderer.pri  WorkflowFileRenderer.cpp  WorkflowFileRenderer.h  WorkflowRenderer.cpp  WorkflowRenderer.h
src/Tools/: BacktraceGenerator.h  MemoryPool.hpp  Pool.hpp  QSingleton.hpp  Singleton.hpp  SynchronisationHelper.hpp  Toggleable.hpp  Tools.pri  UnixBacktraceGenerator.cpp  VlmcDebug.cpp  VlmcDebug.h  WaitCondition.hpp  Win32BacktraceGenerator.cpp  mdate.h
src/Workflow/: AudioClipWorkflow.cpp  AudioClipWorkflow.h  ClipWorkflow.cpp  ClipWorkflow.h  ImageClipWorkflow.cpp  ImageClipWorkflow.h  MainWorkflow.cpp  MainWorkflow.h  StackedBuffer.hpp  TrackHandler.cpp  TrackHandler.h  TrackWorkflow.cpp  TrackWorkflow.h  VideoClipWorkflow.cpp  VideoClipWorkflow.h  Workflow.pri
src/commands/: ActionManager.h  Commands.hpp
src/gui/: About.cpp  About.h  AbstractGraphicsMediaItem.cpp  AbstractGraphicsMediaItem.h  ClipPreviewWidget.cpp  ClipPreviewWidget.h  ClipProperty.cpp  ClipProperty.h  DockWidgetManager.cpp  DockWidgetManager.h  FileBrowser.cpp  FileBrowser.h  GenericPreviewWidget.h  GraphicsCursorItem.cpp  GraphicsCursorItem.h  GraphicsMovieItem.cpp  GraphicsMovieItem.h  LibraryWidget.cpp  LibraryWidget.h  ListViewMediaItem.cpp  ListViewMediaItem.h  MainWindow.cpp  MainWindow.h  MediaListWidget.cpp  MediaListWidget.h  MediaProperty.cpp  MediaProperty.h  Panel.cpp  Panel.h  PreferenceWidget.cpp  PreferenceWidget.h  Preferences.cpp  Preferences.h  PreviewWidget.cpp  PreviewWidget.h  ProjectPreferences.cpp  ProjectPreferences.h  RenderPreviewWidget.cpp  RenderPreviewWidget.h  Settings.h  (+17 more)
src/metadata/: MetaDataManager.cpp  MetaDataManager.h  MetaDataWorker.cpp  MetaDataWorker.h
src/renderer/: ClipRenderer.cpp  ClipRenderer.h  GenericRenderer.h  WorkflowRenderer.cpp  WorkflowRenderer.h
src/tools/: Pool.hpp  Singleton.hpp  Toggleable.hpp  WaitCondition.hpp
(+274 files in other folders)
