
SET(LAUNCHER_SRCS main.cpp Launcher.cpp)

SET (LAUNCHER_HDRS Launcher.h)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  .
)

QT4_ADD_RESOURCES(LAUNCHER_RCC_SRCS ${LAUNCHER_RCC})
QT4_WRAP_CPP(LAUNCHER_MOC_SRCS ${LAUNCHER_HDRS})

ADD_EXECUTABLE(launcher ${LAUNCHER_SRCS} ${LAUNCHER_MOC_SRCS} ${LAUNCHER_RCC_SRCS})

TARGET_LINK_LIBRARIES(launcher ${QT_QTCORE_LIBRARY})

INSTALL(FILES launcher RUNTIME DESTINATION ${VLMC_BIN_DIR})

ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_SOURCE_DIR}/bin/launcher
  COMMAND ${CMAKE_COMMAND} copy ${CMAKE_CURRENT_SOURCE_DIR}/launcher ${CMAKE_SOURCE_DIR}/bin/launcher
  DEPENDS ${CMAKE_BINARY_DIR}/src/launcher
)


