PROJECT(InvertRNBEffectPlugin)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
    ${QT_INCLUDE_DIR}
    ../../../PluginsAPI
)

SET(SOURCES_CPP
    InvertRNBEffectPlugin.cpp
    InvertRNBEffectPluginCreator.cpp
    ../../../PluginsAPI/LightVideoFrame.cpp
)

SET(SOURCES_H
    InvertRNBEffectPluginCreator.h
)

QT4_WRAP_CPP(SOURCES_H_MOC ${SOURCES_H})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

ADD_LIBRARY(InvertRNBEffectPlugin SHARED ${SOURCES_CPP} ${SOURCES_H_MOC})

TARGET_LINK_LIBRARIES(InvertRNBEffectPlugin ${QT_LIBRARIES})

