PROJECT(MixerEffectPlugin)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
    ${QT_INCLUDE_DIR}
    ../../../PluginsAPI
)

SET(SOURCES_CPP
    MixerEffectPlugin.cpp
    MixerEffectPluginCreator.cpp
    ../../../PluginsAPI/LightVideoFrame.cpp
)

SET(SOURCES_H
    MixerEffectPluginCreator.h
)

QT4_WRAP_CPP(SOURCES_H_MOC ${SOURCES_H})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

ADD_LIBRARY(MixerEffectPlugin SHARED ${SOURCES_CPP} ${SOURCES_H_MOC})
ADD_DEPENDENCIES(MixerEffectPlugin vlmc)

TARGET_LINK_LIBRARIES(MixerEffectPlugin ${QT_LIBRARIES})

INSTALL(TARGETS MixerEffectPlugin LIBRARY DESTINATION ${VLMC_EFFECTS_DIR})
